{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 27,
  "lineage": "db9ee15b-2788-522e-c6e4-cb6e8ceb2267",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_bastion_icap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0885983c9cce93481",
            "domain": "vpc",
            "id": "eipalloc-08d5a83e295417dfe",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-03c12912fcb1e56cc",
            "private_dns": "ip-10-0-1-50.eu-west-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-34-241-235-86.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.235.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw_icap_ew1",
            "aws_network_interface.nic_pub_bastion_icap",
            "aws_security_group.sg_bastion_icap",
            "aws_subnet.subnet_pub_icap_ew1a",
            "aws_vpc.vpc_icap_ew1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_icap_ew1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08bac620dc84221eb",
            "arn": "arn:aws:ec2:eu-west-1:639695405324:instance/i-0f1013d2900b4fe49",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1013d2900b4fe49",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "iz-gw-bastion-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-03c12912fcb1e56cc"
              }
            ],
            "primary_network_interface_id": "eni-03c12912fcb1e56cc",
            "private_dns": "ip-10-0-1-50.eu-west-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "34.241.235.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab5965f40f5b918c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058e0eb71d65c02f8",
            "tags": {
              "Delete": "Yes",
              "Evn": "dev",
              "Name": "bastion_icap_ew1a",
              "Owner": "FurqanAziz",
              "Scope": "Created for demo purpose",
              "Service": "ICAP Cluster",
              "Team": "DevOps"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb8ff0fcf53a2677"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_pub_bastion_icap",
            "aws_vpc.vpc_icap_ew1",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_icap_ew1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:639695405324:internet-gateway/igw-001e305fac95ad934",
            "id": "igw-001e305fac95ad934",
            "owner_id": "639695405324",
            "tags": {
              "Delete": "Yes",
              "Evn": "dev",
              "Name": "igw_icap_ew1",
              "Owner": "FurqanAziz",
              "Scope": "Created for demo purpose",
              "Service": "ICAP Cluster",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0730d966dc7454ef6"
          },
          "dependencies": [
            "aws_vpc.vpc_icap_ew1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic_pub_bastion_icap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-03c12912fcb1e56cc",
            "ipv6_address_count": 0,
            "mac_address": "0a:7a:97:52:7b:6b",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0eb8ff0fcf53a2677"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058e0eb71d65c02f8"
          },
          "dependencies": [
            "aws_security_group.sg_bastion_icap",
            "aws_subnet.subnet_pub_icap_ew1a",
            "aws_vpc.vpc_icap_ew1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r_ing_pub_icap_ew1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-001e305fac95ad934",
            "id": "r-rtb-0bfcf635fc7ecd98b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bfcf635fc7ecd98b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_icap_ew1",
            "aws_subnet.subnet_pub_icap_ew1a",
            "aws_vpc.vpc_icap_ew1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_prv_icap_ew1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d6da2ec0e4a2d417",
            "owner_id": "639695405324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Delete": "Yes",
              "Evn": "dev",
              "Name": "rt_prv_icap_ew1b",
              "Owner": "FurqanAziz",
              "Scope": "Created for demo purpose",
              "Service": "ICAP Cluster",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0730d966dc7454ef6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet_prv_icap_ew1b",
            "aws_vpc.vpc_icap_ew1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_prv_icap_ew1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061d33032149ba9b9",
            "route_table_id": "rtb-0d6da2ec0e4a2d417",
            "subnet_id": "subnet-05762643b1c372555"
          },
          "dependencies": [
            "aws_route_table.rt_prv_icap_ew1b",
            "aws_subnet.subnet_prv_icap_ew1b",
            "aws_vpc.vpc_icap_ew1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_pub_icap_ew1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad59922c4b2163b",
            "route_table_id": "rtb-0bfcf635fc7ecd98b",
            "subnet_id": "subnet-058e0eb71d65c02f8"
          },
          "dependencies": [
            "aws_internet_gateway.igw_icap_ew1",
            "aws_subnet.subnet_pub_icap_ew1a",
            "aws_vpc.vpc_icap_ew1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_bastion_icap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:639695405324:security-group/sg-0eb8ff0fcf53a2677",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb8ff0fcf53a2677",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from everywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from everywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "639695405324",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0730d966dc7454ef6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_icap_ew1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_prv_icap_ew1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:639695405324:subnet/subnet-05762643b1c372555",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05762643b1c372555",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "639695405324",
            "tags": {
              "Delete": "Yes",
              "Evn": "dev",
              "Name": "subnet_prv_icap_ew1b",
              "Owner": "FurqanAziz",
              "Scope": "Created for demo purpose",
              "Service": "ICAP Cluster",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0730d966dc7454ef6"
          },
          "dependencies": [
            "aws_vpc.vpc_icap_ew1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_pub_icap_ew1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:639695405324:subnet/subnet-058e0eb71d65c02f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-058e0eb71d65c02f8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "639695405324",
            "tags": {
              "Delete": "Yes",
              "Evn": "dev",
              "Name": "subnet_pub_icap_ew1a",
              "Owner": "FurqanAziz",
              "Scope": "Created for demo purpose",
              "Service": "ICAP Cluster",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0730d966dc7454ef6"
          },
          "dependencies": [
            "aws_vpc.vpc_icap_ew1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_icap_ew1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:639695405324:vpc/vpc-0730d966dc7454ef6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe81d3e5be123530",
            "default_route_table_id": "rtb-0bfcf635fc7ecd98b",
            "default_security_group_id": "sg-04bb9714bf381e317",
            "dhcp_options_id": "dopt-ddb5b2bb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0730d966dc7454ef6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bfcf635fc7ecd98b",
            "owner_id": "639695405324",
            "tags": {
              "Delete": "Yes",
              "Evn": "dev",
              "Name": "vpc_icap_ew1",
              "Owner": "FurqanAziz",
              "Scope": "Created for demo purpose",
              "Service": "ICAP Cluster",
              "Team": "DevOps"
            }
          }
        }
      ]
    }
  ]
}